RM: Inplace filing prototype
  * extension of seciruty service to allow management of extended readers
  * extended reader maintained within file plan hierarchy 
  * support ready for removal (ie move) and overlapping of readers in hirearchy (maintained in reference counting map)
  * general rename to "Unfiled Records" rather than "New Records"
  * File plan unfiled records filter
  * Unit tests
  * Correct permissions on created unfiled container (file for admin as per file plan root)
  * record readers dynamic authority applied to file plan components on bootstrap and creation



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/INPLACE@42063 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/documentlist.css
+++ b/rm-share/source/web/rm/components/documentlibrary/documentlist.css
@@ -35,3 +35,10 @@
    background-repeat: no-repeat;
    padding-left: 20px;
 }
+
+.fileplan-filter span.newRecords
+{
+   background-image: url(actions/rm-add-record-metadata-16.png);
+   background-repeat: no-repeat;
+   padding-left: 20px;
+}
