RM InPlace Prototype:
  * permission mapping improvements ... allows filling and declaration of unfiled records
  * actions of 'records' in doc lib are shown as restricted rm list
  * "Record" banner is shown in doc lib if content is a record (this differs from the normal record view where the undeclared status is shown, this isn't relevant for a content user)
  * linked to many record folders indicator not shown unless it really is linked to many record folders
  


git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/INPLACE@42374 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/documentlist.css
+++ b/rm-share/source/web/rm/components/documentlibrary/documentlist.css
@@ -36,7 +36,7 @@
    padding-left: 20px;
 }
 
-.fileplan-filter span.newRecords
+.fileplan-filter span.unfiledRecords
 {
    background-image: url(actions/rm-add-record-metadata-16.png);
    background-repeat: no-repeat;
