--- a/rm-share/source/web/rm/components/dashlets/datasets.css
+++ b/rm-share/source/web/rm/components/dashlets/datasets.css
@@ -9,3 +9,11 @@
    margin-top: 0.5em;
    padding-left: 0.5em;
 }
+
+.dataset-not-rm-admin
+{
+   clear: both;
+   line-height: 1.4;
+   padding: 7px 9px;
+   color: red;
+}
