RM-552 (Add 'Manage Permission' action to file plan toolbar)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@43798 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -20,6 +20,20 @@
    background-image: url(actions/rm-export-disabled-16.png);
 }
 
+.toolbar .manage-permissions button
+{
+   /* FIXME Change the background-image
+   background: transparent url(actions/rm-export-16.png) no-repeat 12px 4px;
+   padding-left: 32px;
+   */
+}
+.toolbar .manage-permissions .yui-button-disabled button
+{
+   /* FIXME Change the background-image
+   background-image: url(actions/rm-export-disabled-16.png);
+   */
+}
+
 .toolbar .report button
 {
    background: transparent url(actions/rm-file-report-16.png) no-repeat 12px 4px;
