Changed the background image for the deactivated folder permissions button.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@43973 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -27,8 +27,7 @@
 }
 .toolbar .manage-permissions .yui-button-disabled button
 {
-   /* FIXME Change the background-image - use the disabled version when it is supplied */
-   background-image: url(../../../components/documentlibrary/actions/folder-manage-permissions-16.png);
+   background-image: url(actions/folder-manage-permissions-disabled-16.png);
 }
 
 .toolbar .report button
