--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -69,9 +69,9 @@
    background-image: url(actions/rm-export-16.png);
 }
 
-.toolbar .onActionFileTo
+.toolbar .onActionLinkTo
 {
-   background-image: url(actions/rm-file-to-16.png);
+   background-image: url(actions/rm-link-to-16.png);
 }
 
 .toolbar .onActionFreeze
