RM-633 (A records admin is able to view the users and groups in a role from the management console UI)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50041 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/console/rm-users-and-groups.css
+++ b/rm-share/source/web/rm/components/console/rm-users-and-groups.css
@@ -112,7 +112,7 @@
 
 #roleContentGroups .list-header
 {
-	margin-right: -7%;
+   margin-right: -7%;
    border-bottom: 1px solid #999999;
 }
 
@@ -130,6 +130,18 @@
 
 #roleContentUsers .list-header
 {
-	margin-right: -3%;
+   margin-right: -3%;
    border-bottom: 1px solid #999999;
+}
+
+#roleContentGroups ul.groups-list li
+{
+   clear: both;
+   padding: 0.4em;
+}
+
+#roleContentUsers ul.users-list li
+{
+   clear: both;
+   padding: 0.4em;
 }
