RM-633 (A records admin is able to view the users and groups in a role from the management console UI)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50080 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/console/rm-users-and-groups.css
+++ b/rm-share/source/web/rm/components/console/rm-users-and-groups.css
@@ -61,13 +61,13 @@
    margin-top: 0.25em;
 }
 
-#deleteGroup
+#removeGroup
 {
    margin-top: 0.25em;
    margin-right: 9px;
 }
 
-#deleteUser
+#removeUser
 {
    margin-top: 0.25em;
    margin-right: 5px;
