RM-633 (A records admin is able to view the users and groups in a role from the management console UI)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@50085 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/console/rm-users-and-groups.css
+++ b/rm-share/source/web/rm/components/console/rm-users-and-groups.css
@@ -90,6 +90,16 @@
    margin: 0.5em;
 }
 
+#roleGroups ul
+{
+   margin: 0.5em;
+}
+
+#roleUsers ul
+{
+   margin: 0.5em;
+}
+
 #roles,
 .roleGroups
 {
@@ -104,10 +114,15 @@
    height: 24em;
 }
 
+#roleSelection
+{
+   width: 31%;
+}
+
 #roleContentGroups
 {
-   text-align: right;
    border-left: 1px solid #444444;
+   width: 31%;
 }
 
 #roleContentGroups *
@@ -123,9 +138,8 @@
 
 #roleContentUsers
 {
-   text-align: right;
    border-left: 1px solid #444444;
-   width: 31%;
+   width: 32%;
 }
 
 #roleContentUsers *
@@ -135,7 +149,7 @@
 
 #roleContentUsers .list-header
 {
-   margin-right: -3%;
+   margin-right: -6%;
    border-bottom: 1px solid #999999;
 }
 
