DOD Recert: Allow permissions to be set on the file plan node (so that Dan and Jan can create root categories)
  * Merge HEAD to DEV/DODCERT

    - r43798 RM-552 (Add 'Manage Permission' action to file plan toolbar)
    - r43859 RM-552 (Add 'Manage Permission' action to file plan toolbar)
                * Changed the icons
    - r43863 RM-552 (Add 'Manage Permission' action to file plan toolbar)
                * Changed the existing ManageAccessRights capability and reusing it



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/DODRECERT@50933 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -20,6 +20,17 @@
    background-image: url(actions/rm-export-disabled-16.png);
 }
 
+.toolbar .manage-permissions button
+{
+   background: transparent url(../../../components/documentlibrary/actions/folder-manage-permissions-16.png) no-repeat 12px 4px;
+   padding-left: 32px;
+}
+.toolbar .manage-permissions .yui-button-disabled button
+{
+   /* FIXME Change the background-image - use the disabled version when it is supplied */
+   background-image: url(../../../components/documentlibrary/actions/folder-manage-permissions-16.png);
+}
+
 .toolbar .report button
 {
    background: transparent url(actions/rm-file-report-16.png) no-repeat 12px 4px;
