--- a/rm-share/source/web/rm/components/console/rm-audit.css
+++ b/rm-share/source/web/rm/components/console/rm-audit.css
@@ -304,3 +304,14 @@
    float: right;
    margin-top: 10px;
 }
+
+body { font-family: arial,verdana; font-size: 81%; color: #333; }
+.label { margin-right: 5px; font-weight: bold; }
+.value { margin-right: 40px; }
+.audit-info { background-color: #efefef; padding: 10px; margin-bottom: 4px; }
+.audit-entry { border: 1px solid #bbb; margin-top: 15px; }
+.audit-entry-header { background-color: #bbb; padding: 8px; }
+.audit-entry-node { padding: 10px; }
+.changed-values-table { margin-left: 6px; margin-bottom: 2px;width: 99%; }
+.changed-values-table th { text-align: left; background-color: #eee; padding: 4px; }
+.changed-values-table td { width: 33%; padding: 4px; border-top: 1px solid #eee; }
