RM-791 (Select menu item in the file plan does not work)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@53789 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/documentlist.css
+++ b/rm-share/source/web/rm/components/documentlibrary/documentlist.css
@@ -1,21 +1,31 @@
 /* DocList bar Select menu */
 
-.doclist .file-select .selectRecords
+.toolbar .file-select .selectRecords
 {
    background-image: url(images/select-records-16.png);
 }
 
-.doclist .file-select .selectUndeclaredRecords
+.toolbar .file-select .selectUndeclaredRecords
 {
    background-image: url(images/select-undeclared-16.png);
 }
 
-.doclist .file-select .selectAll
+.toolbar .file-select .selectRecordFolders
+{
+   background-image: url(images/record-folder-16.png);
+}
+
+.toolbar .file-select .selectRecordCategories
+{
+   background-image: url(images/record-category-16.png);
+}
+
+.toolbar .file-select .selectAll
 {
    background-image: url(images/select-all-rm-16.png);
 }
 
-.doclist .file-select .selectNone
+.toolbar .file-select .selectNone
 {
    background-image: url(images/select-none-rm-16.png);
 }
