RM-886: Audit Log. Filters are applied only on displayed entries. RM-870: Audit UI layout is incorrect RM-889: Audit cannot be filtered by property values after rename file RM-838: Searching for audit logs by event doesn't work for some event types
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@54809 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/console/rm-audit.css
+++ b/rm-share/source/web/rm/components/console/rm-audit.css
@@ -10,7 +10,6 @@
 
 .rm-audit-log .yui-u
 {
-   width: 100%;
    margin: 0;
    float: none;
 }
@@ -99,6 +98,7 @@
 .rm-audit .yui-gb .yui-u
 {
    text-align: left;
+   width: 22%
 }
 
 .rm-audit .yuimenubaritemlabel, 
@@ -109,7 +109,7 @@
 
 .filters
 {
-   background-color: #DDD;
+   border: 1px solid #444444;
    height: 10em;
    margin-top: 1em;
    z-index: 1;
@@ -143,6 +143,7 @@
 {
    position: relative;
    height: 10em;
+   align: left;
 }
 
 .rm-auditDT
