--- a/rm-share/source/web/rm/css/rm.css
+++ b/rm-share/source/web/rm/css/rm.css
@@ -1,10 +1,35 @@
 /* RM-376 - ensure that calendar doesn't get lost off the end of forms
  */
 .form-container .datepicker
-{ 
-   display: none; 
+{
+   display: none;
    position: relative;
-   float: right; 
+   float: right;
    z-index: 1;
    margin-left: 1.5em;
-} 
+}
+
+.file-transfer-report-unfiled-records
+{
+   font-size: 123.1%;
+   font-weight: normal;
+   padding: 10px 0 0 5px;
+}
+
+.file-transfer-report-unfiled-records hr
+{
+   background-color: #EEEEEE;
+   height: 1px !important;
+   margin: 15px 0 10px 50px;
+   width: 80%;
+}
+
+.file-transfer-report-treeview-disabled
+{
+   opacity: 0.5;
+}
+
+.file-transfer-report-treeview-enabled
+{
+   opacity: 1;
+}
