RM-1200/RM-1201, Added functionality to copy and move folders and records with unfiled records
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64018 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -134,7 +134,17 @@
    background-image: url(actions/rm-copy-record-to-16.png);
 }
 
+.toolbar .onActionCopyUnfiledRecordTo
+{
+   background-image: url(actions/rm-copy-record-to-16.png);
+}
+
 .toolbar .onActionCopyRecordFolderTo
+{
+   background-image: url(actions/rm-copy-folder-to-16.png);
+}
+
+.toolbar .onActionCopyUnfiledRecordFolderTo
 {
    background-image: url(actions/rm-copy-folder-to-16.png);
 }
@@ -149,7 +159,17 @@
    background-image: url(images/move-record-to-16.png);
 }
 
+.toolbar .onActionMoveUnfiledRecordTo
+{
+   background-image: url(images/move-record-to-16.png);
+}
+
 .toolbar .onActionMoveRecordFolderTo
+{
+   background-image: url(images/move-folder-to-16.png);
+}
+
+.toolbar .onActionMoveUnfiledRecordFolderTo
 {
    background-image: url(images/move-folder-to-16.png);
 }
