RM-1321 (Implement UI for adding records/folders to hold(s)) RM-1334 (Implement UI for removing an item from hold(s))
 * Added actions/capabilities so that the actions add to hold and remove from hold can be called from the UI
 * Also everything related to the freeze/unfreeze actions has been removed from rm-share

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64814 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/documentlibrary/documentlist.css
+++ b/rm-share/source/web/rm/components/documentlibrary/documentlist.css
@@ -34,7 +34,7 @@
 
 .fileplan-filter span.holds
 {
-   background-image: url(actions/rm-freeze-16.png);
+   background-image: url(actions/rm-add-to-hold-16.png);
    background-repeat: no-repeat;
    padding-left: 20px;
 }
