--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -174,6 +174,11 @@
    background-image: url(../../../components/documentlibrary/actions/folder-delete-16.png);
 }
 
+.toolbar .onActionAddToHold
+{
+	background-image: url(../../../rm/components/documentlibrary/actions/rm-add-to-hold-16.png);
+}
+
 /* Messages (e.g. Delete confirmation) */
 .toolbar-file-list span.record-category,
 .toolbar-file-list span.record-folder
