RM-788, Removed resize attribute from rm search box as resizing it broke the layout
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@69784 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/search/search.css
+++ b/rm-share/source/web/rm/components/search/search.css
@@ -73,6 +73,7 @@
    width: 60em;
    height: 4em;
    border: 1px solid #AAAAAA;
+   resize: none;
 }
 
 .rm-search .query
@@ -110,8 +111,8 @@
 
 .rm-search .datepicker
 {
-   display: none; 
-   position: absolute; 
+   display: none;
+   position: absolute;
    z-index: 1;
    margin: -5em 0 0 20em;
 }
@@ -121,7 +122,7 @@
    cursor: pointer;
 }
 
-.rm-search .yuimenubaritemlabel, 
+.rm-search .yuimenubaritemlabel,
 .rm-search .yuimenuitemlabel
 {
    color: #000 !important;
