RM-1604 (View Rejected Record Information)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@84517 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/document-details/document-versions.css
+++ b/rm-share/source/web/rm/components/document-details/document-versions.css
@@ -1,5 +1,6 @@
 .document-versions .version-panel-left .document-recorded-version-history
 {
+   /* FIXME: Change image */
    background-image: url("../documentlibrary/images/record-16.png");
    background-position: center;
    background-repeat: no-repeat;
