--- a/rm-share/source/web/rm/components/documentlibrary/documentlist.css
+++ b/rm-share/source/web/rm/components/documentlibrary/documentlist.css
@@ -52,3 +52,8 @@
    background-repeat: no-repeat;
    padding-left: 20px;
 }
+
+.doclist .documents .yui-dt-highlighted .filename span.document-version
+{
+   visibility: hidden !important;
+}
