RM-1765 (Simplified Add Relationship Dialog)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@91719 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/document-details/relationships.css
+++ b/rm-share/source/web/rm/components/document-details/relationships.css
@@ -56,3 +56,23 @@
 {
    margin-top: -18px;
 }
+
+div[id^="alfresco_rm_forms_controls_AlfRmRecordPickerControl"].alfresco-forms-controls-BaseFormControl
+{
+   margin-left: 20em;
+   margin-top: -40px;
+   margin-bottom: 20px;
+}
+
+.alfresco-forms-Form .alfresco-lists-AlfList .alfresco-documentlibrary-views-layouts-AlfDocumentListView
+{
+   background-color: rgba(250, 250, 250, 1);
+   border-color: lightgray;
+   border-style: solid;
+   border-width: 1px 0;
+}
+
+.alfresco-dialog-AlfDialog .dialog-body .alfresco-forms-Form .alfresco-forms-controls-DojoSelect
+{
+   margin-top: 17px;
+}
