RM-1798 (Text in Auto-Declare dialog is mis-aligned)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92076 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/components/documentlibrary/dm-actions.css
+++ b/rm-share/source/web/components/documentlibrary/dm-actions.css
@@ -54,5 +54,6 @@
 
 .rm-recorded-version-config select[id$=-recordedVersions]
 {
-   margin-top: 6px;
+   margin-bottom: 9px;
+   margin-top: 9px;
 }
