Simplified relationship view:
 * remove modifier, modified by and size in favour of description
 * display the record version, rather than the node version
 * some styling



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92114 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/document-details/relationships.css
+++ b/rm-share/source/web/rm/components/document-details/relationships.css
@@ -92,3 +92,30 @@ div[id^="alfresco_rm_forms_controls_AlfRmRecordPickerControl"].alfresco-forms-co
 {
    margin-top: 17px;
 }
+
+.relationship-property-link-name
+{
+    font-size: 131%;
+    font-weight: normal;
+    color: #333;
+    word-wrap: break-word;
+    text-decoration:none;
+}
+
+.relationship-property-link-name:hover
+{
+	text-decoration:underline;
+}
+
+.relationship-property-detail-label .label
+{
+	color: #606060;
+}
+
+.relationship-name .value
+{
+    font-size: 131%;
+    font-weight: normal;
+    color: #333;
+    word-wrap: break-word;
+}
