--- a/rm-share/source/web/rm/components/document-details/relationships.css
+++ b/rm-share/source/web/rm/components/document-details/relationships.css
@@ -75,38 +75,40 @@ span[widgetid=RM_RELATIONSHIP_TOOLBAR_ADD_BUTTON].dijitButtonHover
    color: #606060;
 }
 
-.alfresco-core-ProcessWidgets .relationshipPickerParentNav
+span[widgetid=RM_RELATIONSHIP_SELECT_RECORD_DIALOG_UP_BUTTON]
 {
+   margin-bottom: -25px;
    margin-left: 5px;
-   margin-bottom: -35px;
+   margin-top: 12px;
 }
 
-.alfresco-dialog-AlfDialog .dialog-body .alfresco-core-ProcessWidgets .alfresco-pickers-Picker .sub-pickers > .alfresco-lists-AlfList
+#RM_RELATIONSHIP_SELECT_RECORD_DIALOG_PICKED_ITEM_CONTENT
+{
+   width: 400px;
+   max-width: 400px;
+}
+
+#RM_RELATIONSHIP_SELECT_RECORD_DIALOG_DOCUMENT_LIST_CONTENT
 {
    margin-top: 22px;
    width: 400px;
    max-width: 400px;
 }
 
-.alfresco-dialog-AlfDialog .dialog-body .alfresco-core-ProcessWidgets .alfresco-pickers-Picker .picked-items > .alfresco-documentlibrary-views-layouts-AlfDocumentListView
+#RM_RELATIONSHIP_SELECT_RECORD_DIALOG_CONTAINER
 {
-   width: 400px;
-   max-width: 400px;
+   margin-top: -20px;
 }
 
-.alfresco-dialog-AlfDialog .dialog-body .alfresco-core-ProcessWidgets.alfresco-layout-VerticalWidgets
-{
-   margin-top: -18px;
-}
-
-div[id^="alfresco_rm_forms_controls_AlfRmRecordPickerControl"].alfresco-forms-controls-BaseFormControl
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_CONTROL
 {
    margin-left: 20em;
    margin-top: -40px;
    margin-bottom: 20px;
 }
 
-.alfresco-forms-Form .alfresco-lists-AlfList .alfresco-documentlibrary-views-layouts-AlfDocumentListView
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_INFO,
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_INFO_SELECTED
 {
    background-color: rgba(250, 250, 250, 1);
    border-color: lightgray;
@@ -114,7 +116,16 @@ div[id^="alfresco_rm_forms_controls_AlfRmRecordPickerControl"].alfresco-forms-co
    border-width: 1px 0;
 }
 
-.alfresco-dialog-AlfDialog .dialog-body .alfresco-forms-Form .alfresco-forms-controls-DojoSelect
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_SELECT
 {
    margin-top: 17px;
+}
+
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_SELECT_CONTROL.dijitTextBoxFocused,
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_SELECT_CONTROL.dijitActive,
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_SELECT_CONTROL.dijitFocused,
+#RM_RELATIONSHIP_SELECT_RECORD_FORM_SELECT_CONTROL.dijitSelectHover,
+span[widgetid=RM_RELATIONSHIP_SELECT_RECORD_BUTTON].dijitButton.dijitButtonFocused.dijitFocused
+{
+   border-color: rgb(204, 204, 204);
 }
