--- a/rm-share/source/web/components/documentlibrary/dm-actions.css
+++ b/rm-share/source/web/components/documentlibrary/dm-actions.css
@@ -57,3 +57,15 @@
    margin-bottom: 9px;
    margin-top: 9px;
 }
+
+.rm-recorded-version-config .bd .yui-gd .yui-u.first.rm-recorded-versions
+{
+   padding-right: 0.4em;
+   padding-top: 0.6em;
+   width: 150px;
+}
+
+.rm-recorded-version-config .rm-recorded-versions-select
+{
+   width: 300px;
+}
