RM-1830 (Incorrect display of Define Roles page if Application theme is set to High Contrast)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@96351 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/console/rm-users-and-groups.css
+++ b/rm-share/source/web/rm/components/console/rm-users-and-groups.css
@@ -83,12 +83,14 @@
    display: block;
    padding: 0.333em;
    text-decoration: none;
+   color: inherit;
 }
 
 #roleGroups a,
 #roleUsers a
 {
    text-decoration: none;
+   color: inherit;
 }
 
 #roles ul,
