--- a/rm-share/source/web/rm/components/documentlibrary/toolbar.css
+++ b/rm-share/source/web/rm/components/documentlibrary/toolbar.css
@@ -174,9 +174,14 @@
    background-image: url(../../../components/documentlibrary/actions/folder-delete-16.png);
 }
 
-.toolbar .onActionAddToHold
+.toolbar .onActionAddToHoldRecord
 {
-	background-image: url(../../../rm/components/documentlibrary/actions/rm-add-to-hold-16.png);
+   background-image: url(../../../rm/components/documentlibrary/actions/rm-add-to-hold-16.png);
+}
+
+.toolbar .onActionAddToHoldRecordFolder
+{
+   background-image: url(../../../rm/components/documentlibrary/actions/rm-add-to-hold-folder-16.png);
 }
 
 /* Messages (e.g. Delete confirmation) */
