Change image that was pointing to missing Aikau path
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/dwebster-relationship-refactor@99947 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/document-details/relationships.css
+++ b/rm-share/source/web/rm/components/document-details/relationships.css
@@ -34,7 +34,7 @@
 
 .rm-relationship-toolbar-add-button span[role=button]
 {
-   background: url("../../../js/alfresco/forms/controls/css/images/add-icon-16.png") no-repeat scroll 1px 1px transparent;
+   background: url("../../../../components/images/add-icon-16.png") no-repeat scroll 1px 1px transparent;
    font-size: 12px;
    margin-left: -5px;
    margin-right: -7px;
