Fixes bug with dialog sizing - see AKU-187
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/DEV/dwebster-relationship-refactor@101063 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/rm/components/document-details/relationships.css
+++ b/rm-share/source/web/rm/components/document-details/relationships.css
@@ -81,6 +81,7 @@
    margin-top: 22px;
    width: 400px;
    max-width: 400px;
+   position:relative;
 }
 
 .rm-relationship-select-record-dialog-container
