--- a/rm-share/source/web/rm/components/document-details/relationships.css
+++ b/rm-share/source/web/rm/components/document-details/relationships.css
@@ -94,6 +94,7 @@
    margin-left: 20em;
    margin-top: -40px;
    margin-bottom: 20px;
+   text-align: right;
 }
 
 .rm-relationship-select-record-form-info,
@@ -122,4 +123,8 @@
 .alfresco-buttons-AlfButton.rm-relationship-select-record-button.dijitButton.dijitButtonFocused.dijitFocused
 {
    border-color: rgb(204, 204, 204);
+}
+
+.alfresco-buttons-AlfButton.rm-relationship-select-record-button {
+   margin-right:-5px;
 }
