--- a/rm-share/source/web/rm/components/document-details/node-header.css
+++ b/rm-share/source/web/rm/components/document-details/node-header.css
@@ -1,14 +1,6 @@
-.classified-banner
+.status-banner.theme-bg-color-2.theme-border-4.classified-info.classified-banner
 {
-   padding: 0.5em 1em;
-   margin-top: 1.0em;
-}
-
-.classified-info
-{
-   line-height: 1.5em;
-   padding: 1px 0 1px 20px;
-   background-image: url(../../../components/images/warning-16.png);
-   background-repeat: no-repeat;
-   background-position: -1px 1px;
+   margin-bottom: 0.01em;
+   margin-top: 0.5em;
+   background-color: transparent;
 }
